# otus-cpp

./: .gitignore  CMakeLists.txt  lib.cpp  main.cpp  test_ip_filter.cpp  test_main_gtest.cpp  test_version_gtest.cpp
.github/workflows/: release.yml
src/: CMakeLists.txt  custom_container.h  lib.h  lib_version.cpp  lib_version.h  main.cpp  memory_allocator.h
unit_tests/: CMakeLists.txt
unit_tests/boost/: CMakeLists.txt  test_version.cpp
unit_tests/gtest/: CMakeLists.txt  test_custom_container.cpp  test_memory_allocator.cpp  test_version.cpp
